--- a/src/components/LoadingSpinner.css
+++ b/src/components/LoadingSpinner.css
@@ -17,9 +17,9 @@
   }
   
   .spinner-container {
-    display: grid;
+    display: flex;
     justify-content: center;
     align-items: center;
-    height: 350px;
+    height: 100%;
     
   }
